2012-12-29  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_adddna.m: major code refactoring
	* txtl_protein_*.m: input/output data format has changed (geneData: cellarray
	names + lengths)
	* txtl_prom_*.m: input/output data format has changed (promData: cellarray
	names + lengths)

2012-12-08  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_setup_default_basepair_lengths.m: multipurpose default length basepair set up
	for promoters,utr_rbs,genes
	* txtl_prom_*: the default length handler and add txtl_addspecies are in place
	* txtl_protein_*: the default length handler and add txtl_addspecies are in place
	* txtl_addspecies.m: multi species array handling capability
	* txtl_continue_simulation: deleted, since the functionality is moved
	to txtl_runsim

2012-11-23  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_transcription.m: sigma factor independent transcription (merging the old 
	rnap files). The corresponding promoters are adjusted. 
	Old rnap70 and rnap28 files are deleted from this revision. 

2012-11-19  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_runsim.m: parameter set up moved here
	* sample circuits: minor adjustment to the new i/o argument order in
	txtl_runsim.

2012-10-25  Zoltan Tuza <zoltuz@zoltuz-laptop>

	* txtl_rnap_rnap28.m: added an option for modified NTP utilization 
	model to avoid high reaction order
	* txtl_rnap_rnap70.m: added an option modified NTP utilization 
	model to avoid high reaction order
	* txtl_adddna.m: added an optional model for AA utilization
	* txtl_setup_parameters.m: new parameters for the reactions in the 
	new NTP and AA utilization model

2012-10-22  Zoltan Tuza <zoltuz@zoltuz-laptop>
	* txtl_prom_p28.m: modification in the reaction modeling
	* txtl_prom_p28_ptet.m: modification in the reaction modeling
	* txtl_protein_tetR.m: tetramerization is taken out
	* txtl_protein_sigma28.m: reverse reaction is adjusted to RNAP70's reaction rate 
	* incoherent_ff_loop.m: implementation of incoherent ff_loop based on Zach's circuit