@@ -46,7 +46,7 @@ dna_gamS = txtl_adddna(tube3, 'p70(50)', 'rbs(20)', 'gamS(1000)', 1, 'plasmid');
 % Mix the contents of the individual tubes
 Mobj = txtl_combine([tube1, tube2, tube3], [6, 1, 1.5]);
 m = get(Mobj, 'UserData')
-m{1}{1}'
+
 
 %
 % Run a simulaton
