@@ -1,0 +1,20 @@
+classdef txtl_reaction_config
+    %TXTL_REACTION_CONFIG Summary of this class goes here
+    %   Detailed explanation goes here
+    
+    properties
+        NTPmodel;
+        AAmodel;
+    end
+    
+    methods
+        function rConf = txtl_reaction_config(name)
+        % !TODO zoltuz 1/4/13 handling file based configuration files
+        end
+        
+        
+      
+    end
+    
+end
+
