@@ -1,3 +1,9 @@
+2013-01-04  Zoltan Tuza <zoltuz@zoltuz-laptop>
+
+	* txtl_reaction_config: matlab class for configuration handling. The
+	current object is stored in the circuit-tube's UserData field.
+	* txtl_runsim: minor modification to handle the config object
+
 2012-12-29  Zoltan Tuza <zoltuz@zoltuz-laptop>
 
 	* txtl_adddna.m: major code refactoring
